--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.4.4
-aiohttp==3.10.11
+aiohttp==3.10.1https://phrtsv-8000.csb.app/1
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.5.2
@@ -8,23 +8,35 @@ asyncpg==0.30.0
 attrs==25.1.0
 Authlib==1.3.2
 bcrypt==4.2.1
+certifi==2024.12.14
 cffi==1.17.1
 click==8.1.8
+colorama==0.4.6
 cryptography==44.0.0
 exceptiongroup==1.2.2
 fastapi==0.115.7
 frozenlist==1.5.0
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 multidict==6.1.0
+mypy==1.14.1
+mypy-extensions==1.0.0
+packaging==24.2
 passlib==1.7.4
+pluggy==1.5.0
 propcache==0.2.0
 psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+pytest==8.3.4
+pytest-asyncio==0.25.3
 python-dotenv==1.0.1
+python-multipart==0.0.20
 securely==0.2.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
