--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.4.4
-aiohttp==3.10.1https://phrtsv-8000.csb.app/1
+aiohttp==3.10.1
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.5.2
